Fixed JavaFX compiled jar execution